--- a/quizapp.html
+++ b/quizapp.html
@@ -13,7 +13,7 @@ body {
   background-color: #b8c6db;
   background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 100%);
   font-family: "Poppins", sans-serif;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
   height: 100vh;
